invalid_var_sym_sym_arg_keywords_test/invalid_var_sym_sym_arg_keywords_test_67.src
.IPPcode24
NOT LF@a int@49